Change two occurences of m3u to m3u8, as this is what Rockbox saves in.  Thanks to Grahack on IRC for pointing out.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20799 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/rockbox_interface/wps.tex
+++ b/manual/rockbox_interface/wps.tex
@@ -174,11 +174,14 @@ to bring up the \setting{Playlist Viewer Menu}.
 
 \subsubsection{Playlist Viewer Menu}
   \begin{description}
-    \item[Show Icons.] This toggles display of the icon for the currently selected 
-    playlist entry and the icon for moving a playlist entry
-    \item[Show Indicies.] This toggles display of the line numbering for the playlist
-    \item[Track Display.] This toggles between filename only and full path for playlist entries
-    \item[Save Current Playlist.] Allows the current playlist to be saved as a \fname{.m3u} playlist file
+    \item[Show Icons.] This toggles display of the icon for the currently 
+    selected playlist entry and the icon for moving a playlist entry
+    \item[Show Indicies.] This toggles display of the line numbering for
+       the playlist
+    \item[Track Display.] This toggles between filename only and full path
+       for playlist entries
+    \item[Save Current Playlist.] Allows the current playlist to be saved as
+       a \fname{.m3u8} playlist file
   \end{description}
 
     
