--- a/manual/working_with_playlists/main.tex
+++ b/manual/working_with_playlists/main.tex
@@ -73,9 +73,9 @@ the selected track or directory.
 
 \subsubsection{By using the Main Menu}
 To create a playlist containing all music on your \dap{}, you can use the
-\setting{Create Playlist} command in the \setting{Playlist Options} menu found
+\setting{Create Playlist} command in the \setting{Playlists} menu found
 in the \setting{Main Menu}. The created playlist will be named
-\fname{root.m3u} and saved in the root of your \daps{} disk.
+\fname{root.m3u8} and saved in the root of your \daps{} disk.
 
 \subsection{Adding music to playlists}
   
