Correct error in previous commit - the recording screen is again now only included in the manual if the target can record.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20805 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/main_menu/main.tex
+++ b/manual/main_menu/main.tex
@@ -134,7 +134,7 @@ Rockbox firmware.}
 The details of this menu are covered in
 \reference{ref:manage_settings}.
 
-\input{main_menu/recording_screen.tex}
+\opt{recording}{\input{main_menu/recording_screen.tex}}
 
 \opt{radio}{\input{main_menu/fmradio.tex}}
 
