--- a/manual/configure_rockbox/playback_options.tex
+++ b/manual/configure_rockbox/playback_options.tex
@@ -106,11 +106,13 @@ you to configure settings related to audio playback.
     Options for crossfade settings are:
     \begin{description}
       \item[Enable Crossfade]If set to \setting{Off}, crossfade is disabled.
-        If set to \setting{Always}, songs will always crossfade into one
-        another. If set to \setting{Shuffle}, crossfade is enabled when the
+        If set to \setting{Shuffle}, crossfade is enabled when the
         shuffle feature is set to \setting{Yes}, but disabled otherwise. If set
-        to track skip only, tracks will only crossfade when you manually change
-        tracks.
+        to \setting{Track Skip Only}, tracks will only crossfade when manually
+        skipped. If set to \setting{Shuffle and Track Skip}
+        then crossfade will only be active when shuffle is set to
+        \setting{Yes} and the track is manually skipped. If set to
+        \setting{Always}, tracks will always crossfade into one another.
         %
       \item[Fade In Delay]The ``fade in delay'' is the length of time between
         when the crossfade process begins and when the new track begins to fade
