--- a/manual/main_menu/recording_screen.tex
+++ b/manual/main_menu/recording_screen.tex
@@ -4,9 +4,9 @@
 \screenshot{main_menu/images/ss-while-recording-screen}{The while recording
   screen}{}
 
-Entering the \setting{Recording} option in the \setting{Main Menu} brings up
-a screen in which you can choose to enter the \setting{Recording Screen} or
-the \setting{Recording Settings} (see \reference{ref:Recordingsettings}). 
+Selecting the \setting{Recording} option in the \setting{Main Menu} enters
+the \setting{Recording Screen}, whilst pressing \ActionStdContext{} enters the
+\setting{Recording Settings} (see \reference{ref:Recordingsettings}). 
 The \setting{Recording Screen}
 shows the time elapsed and the size of the file being recorded. A peak meter
 is present to allow you set gain correctly. There is also a volume setting,
@@ -14,16 +14,16 @@ this will only affect the output level of the \dap{} and does \emph{not}
 affect the recorded sound. If enabled in the peak meter settings, a counter in
 front of the peak meters shows the number of times the clip indicator was
 activated during recording. The counter is reset to zero when starting a new
-recording.
+recording.\\*
 
 \opt{swcodec}{
 \opt{disk_storage}{
 \note{When you start a recording, the hard disk will spin up. This will cause
 the peak meters to freeze in the process. This is expected behaviour, and
-nothing to worry about. The recording continues during the spin up.}}}
+nothing to worry about. The recording continues during the spin up.\\*}}}
 
 \opt{MASCODEC}{The frequency, channels and quality}
-\opt{swcodec}{The frequency and channels} settings are shown on the last line.
+\opt{swcodec}{The frequency and channels} settings are shown on the last line.\\*
 
 The controls for this screen are:
 \begin{table}
