Correct a couple of spellings (US to UK).
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20888 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/arabic.lang
+++ b/apps/lang/arabic.lang
@@ -1743,7 +1743,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialize Now"
+    *: "Initialise Now"
   </source>
   <dest>
     *: "ابدأ الآن"
@@ -2409,7 +2409,7 @@
   user: core
   <source>
     *: none
-    swcodec: "Center Frequency"
+    swcodec: "Centre Frequency"
   </source>
   <dest>
     *: none
