--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -1133,7 +1133,7 @@
  user: core
  <source>
     *: none
-    swcodec: "Center Frequency"
+    swcodec: "Centre Frequency"
  </source>
  <dest>
     *: none
@@ -1388,7 +1388,7 @@
  user: core
  <source>
     *: none
-    masf: "MDB Center Frequency"
+    masf: "MDB Centre Frequency"
  </source>
  <dest>
     *: none
@@ -2423,7 +2423,7 @@
  desc: in tag cache settings
  user: core
  <source>
-    *: "Initialize Now"
+    *: "Initialise Now"
  </source>
  <dest>
     *: "Tumakbo ngayon"
