--- a/apps/lang/walon.lang
+++ b/apps/lang/walon.lang
@@ -1152,7 +1152,7 @@
   user: core
   <source>
     *: none
-    swcodec: "Center Frequency"
+    swcodec: "Centre Frequency"
   </source>
   <dest>
     *: none
@@ -1407,7 +1407,7 @@
   user: core
   <source>
     *: none
-    masf: "MDB Center Frequency"
+    masf: "MDB Centre Frequency"
   </source>
   <dest>
     *: none
@@ -2438,7 +2438,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialize Now"
+    *: "Initialise Now"
   </source>
   <dest>
     *: "Inicialijhî asteure"
