I defer to the OED -ise/-ize.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20889 a1c6a512-1295-4272-9138-f99709370657

--- a/apps/lang/arabic.lang
+++ b/apps/lang/arabic.lang
@@ -1743,7 +1743,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "ابدأ الآن"
