--- a/apps/lang/catala.lang
+++ b/apps/lang/catala.lang
@@ -2414,7 +2414,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Inicialitzar ara"
