--- a/apps/lang/czech.lang
+++ b/apps/lang/czech.lang
@@ -2418,7 +2418,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Vynutit obnovení mezipaměti popisků"
