--- a/apps/lang/dansk.lang
+++ b/apps/lang/dansk.lang
@@ -7275,7 +7275,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Genopbyg database"
