--- a/apps/lang/eesti.lang
+++ b/apps/lang/eesti.lang
@@ -1727,7 +1727,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Sunni Tag vahemälu uuendust"
