--- a/apps/lang/francais.lang
+++ b/apps/lang/francais.lang
@@ -2463,7 +2463,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Initialiser le cache"
