--- a/apps/lang/hebrew.lang
+++ b/apps/lang/hebrew.lang
@@ -2420,7 +2420,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "אתחל עכשיו"
