--- a/apps/lang/hindi.lang
+++ b/apps/lang/hindi.lang
@@ -1319,7 +1319,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "अभी Initialize कर"
