--- a/apps/lang/italiano.lang
+++ b/apps/lang/italiano.lang
@@ -2435,7 +2435,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Inizializza ora"
