--- a/apps/lang/japanese.lang
+++ b/apps/lang/japanese.lang
@@ -2439,7 +2439,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "初期化する"
