--- a/apps/lang/korean.lang
+++ b/apps/lang/korean.lang
@@ -1530,7 +1530,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "지금 초기화하기"
