--- a/apps/lang/magyar.lang
+++ b/apps/lang/magyar.lang
@@ -2415,7 +2415,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Indítás most"
