--- a/apps/lang/nederlands.lang
+++ b/apps/lang/nederlands.lang
@@ -1520,7 +1520,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Vernieuw database nu"
