--- a/apps/lang/polski.lang
+++ b/apps/lang/polski.lang
@@ -2440,7 +2440,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Zainicjuj teraz"
