--- a/apps/lang/portugues.lang
+++ b/apps/lang/portugues.lang
@@ -9252,7 +9252,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Inicializar Agora"
