--- a/apps/lang/russian.lang
+++ b/apps/lang/russian.lang
@@ -9937,7 +9937,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Создать сейчас"
