--- a/apps/lang/walon.lang
+++ b/apps/lang/walon.lang
@@ -2438,7 +2438,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Inicialijhî asteure"
