--- a/apps/lang/bulgarian.lang
+++ b/apps/lang/bulgarian.lang
@@ -7444,7 +7444,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Инициализиране сега"
