--- a/apps/lang/espanol.lang
+++ b/apps/lang/espanol.lang
@@ -7533,7 +7533,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "Inicializar ahora"
