--- a/apps/lang/tagalog.lang
+++ b/apps/lang/tagalog.lang
@@ -2423,7 +2423,7 @@
  desc: in tag cache settings
  user: core
  <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
  </source>
  <dest>
     *: "Tumakbo ngayon"
