--- a/apps/lang/thai.lang
+++ b/apps/lang/thai.lang
@@ -2417,7 +2417,7 @@
   desc: in tag cache settings
   user: core
   <source>
-    *: "Initialise Now"
+    *: "Initialize Now"
   </source>
   <dest>
     *: "สร้างขึ้นใหม่เดี๋ยวนี้"
