Properly capitalise "Rockbox", and rewrite a couple of small sections.  Some of this is taken from FS#9880 by Johannes Linke.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20900 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/advanced_topics/archos-flashing.tex
+++ b/manual/advanced_topics/archos-flashing.tex
@@ -152,7 +152,7 @@ a safe place.
 
 \note{There are no separate flash packages for {\dap}s modified to have 8MB
   of RAM. You need to use the corresponding package for non-modified
-  \playertype. You should then install a rockbox image that makes use of all
+  \playertype. You should then install a Rockbox image that makes use of all
   available RAM as described in the following section.
 }
 
@@ -166,7 +166,7 @@ the image in the flash. This is a simple and safe procedure:
 \begin{enumerate}
 \item Download (or build) the Rockbox build you want to use, and unzip it to
   the root of your \dap. Safely disconnect USB.
-\item ROLO into the new rockbox version.
+\item ROLO into the new Rockbox version.
 \item Go to the file browser, and enter the \fname{.rockbox} directory (you
   might need to set the \setting{File View} option to \setting{All}.)
 \item Play the file \fname{rockbox.ucl}\opt{rombox}{, or preferably
