--- a/manual/getting_started/main.tex
+++ b/manual/getting_started/main.tex
@@ -35,27 +35,28 @@ of call when looking for further help.
 If you cannot find the information you are searching for on the Rockbox
 website there are a number of support channels you should have a look at.
 You can try the Rockbox forums located at \url{http://forums.rockbox.org/}.
-Another option are the mailing lists which can be found at
+The mailing lists are another option, and can be found at
 \url{http://www.rockbox.org/mail/}. From that page you can subscribe to the
-lists and browse the archives. For searching the list archives simply use
+lists and browse the archives. To search the list archives simply use
 the search field that is located on the left side of the website.
-Also you can ask on IRC. The main channel for Rockbox is \texttt{\#rockbox}
-on \url{irc://irc.freenode.net}. A bunch of helpful developers and users
-are usually around. Just join and ask -- if someone knows the answer you'll
+Furthermore,  you can ask on IRC. The main channel for Rockbox is
+\texttt{\#rockbox} on \url{irc://irc.freenode.net}. Many helpful developers
+and users are usually around. Just join and ask your question (don't ask to
+ask!) -- if someone knows the answer you'll
 usually get an answer pretty quickly. More information including IRC logs
 can be found at \url{http://www.rockbox.org/irc/}. We also have a web client
-for joining the rockbox IRC channel so there is no need for you
-to install additional software to your computer.
+so that you can join the Rockbox IRC channel without needing
+to install additional software onto your computer.
 
 If you think you have found a bug please make sure it actually is a bug and is
-still present in the most recent version of rockbox. You should try to
+still present in the most recent version of Rockbox. You should try to
 confirm that by using the above mentioned support channels first. After that
 you can submit that issue to our tracker. Refer to \reference{sec:feedback}
 for details on how to use the tracker.
 
 
 \section{Naming conventions and marks}
-We have some conventions especially on naming that are intended to be
+We have some conventions (especially for naming) that are intended to be
 consistent throughout this manual.
 
 Manufacturer and product names are formatted in accordance with the standard
@@ -70,23 +71,23 @@ you finding important parts or parts you could skip. The following icons
 are used:
 \\
 \note{This indicates a note. A note starts always with the text ``Note''.
-  For easier finding of notes we have put this an icon in the margin like
-  here. Notes are used to mark information that could help you
-  or indicate a possible ``weirdness'' in rockbox that would be explained.
+  In order to make finding notes easier each one is accompanied by
+  an icon in the margin as here. Notes are used to mark useful information
+  that may help you to get the most out of Rockbox.
 \\
 }
 \warn{This is a warning. In contrast to notes mentioned above, a warning
-  should be taken more seriously. While ignoring notes will not cause any serious
-  damage ignoring warnings \emph{could} cause serious damage. If you are new to
-  rockbox you should really read the warnings before doing anything that is
-  warned about.
+  should be taken more seriously. Whereas ignoring notes will not cause any
+  serious damage, ignoring warnings \emph{could} cause serious damage to 
+  your \dap{}. You really should read the warnings, especially if you are
+  new to Rockbox.
 \\
 }
 \blind{This icon marks a section that is intended especially for the blind
   and visually impaired. As they cannot
   read the manual in the same way sighted people do we have added some
-  additional descriptions. If you are not blind or visually impaired you most
-  likely can completely skip these blocks. To make this easier, there is an
+  additional descriptions. If you are not blind or visually impaired you
+  can probably completely skip these blocks. To make this easier, there is an
   icon shown in the margin on the right.
 \\
 }
