Apply FS#10204 by Wookey (yes, his real name :)) - Add the subline tags to the WPS Tags summary appendix.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20945 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/advanced_topics/main.tex
+++ b/manual/advanced_topics/main.tex
@@ -227,7 +227,7 @@ name used in the next song and \config{\%Ff} is the mp3 frequency.
   suggest you use the conditional display tag a lot when displaying
   information about the next song!}
 
-\subsubsection{Alternating Sublines}
+\subsubsection{\label{ref:AlternatingSublines}Alternating Sublines}
 
 It is possible to group items on each line into 2 or more groups or 
 ``sublines''. Each subline will be displayed in succession on the line for a 
