Make a mention of the now-supported JPEG album art in the manual.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@20946 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/appendix/album_art.tex
+++ b/manual/appendix/album_art.tex
@@ -10,7 +10,7 @@ WPS}. For this feature to work, you must observe a few rules.
 
 Rockbox does not support album art embedded in your files' tags, and will
 instead look for a picture located in the filesystem. In addition to this, the
-pictures must be in the BMP format.
+pictures must be in the BMP or JPG formats.
 
 \section{Where to put album art}
 
@@ -25,6 +25,8 @@ is as follows:
 \item  \fname{./filename.bmp}
 \item  \fname{./albumtitle.bmp}
 \item  \fname{./cover.bmp}
+\item  \fname{./cover.jpg}
+\item  \fname{./folder.jpg}
 \item  \fname{/.rockbox/albumart/artist-albumtitle.bmp}
 \item  \fname{../albumtitle.bmp}
 \item  \fname{../cover.bmp}
