--- a/manual/appendix/wps_tags.tex
+++ b/manual/appendix/wps_tags.tex
@@ -355,10 +355,11 @@ Allows grouping of several items (sublines) onto one line, with the
 display cycling round the defined sublines. See
 \reference{ref:AlternatingSublines} for details. 
 
-\opt{rtc}{
-  \section{Real Time Clock}
+
+\section{Time and Date}
   \begin{table}
     \begin{tagmap}{}{}
+    \opt{rtc}{
       \config{\%cd}          & Day of month\\
       \config{\%ce}          & Zero padded day of month\\
       \config{\%cH}          & Zero padded hour from 00 to 23 (24 hour format)\\
@@ -368,7 +369,7 @@ display cycling round the defined sublines. See
       \config{\%cm}          & Month\\
       \config{\%cM}          & Minutes\\
       \config{\%cS}          & Seconds\\
-      \config{\%cy}          & 2-digit year\\ 
+      \config{\%cy}          & 2-digit year\\
       \config{\%cY}          & 4-digit year\\
       \config{\%cP}          & Capital AM/PM\\
       \config{\%cp}          & Lowercase am/pm\\
@@ -376,9 +377,23 @@ display cycling round the defined sublines. See
       \config{\%cb}          & Month name\\
       \config{\%cu}          & Day of week from 1 to 7, 1 is Monday\\
       \config{\%cw}          & Day of week from 0 to 6, 0 is Sunday\\
+    }
+      \config{\%cc}          & Check for presence of the clock hardware\\
     \end{tagmap}
   \end{table}
-}
+The \%cc tag returns ``c'' if the necessary hardware is present and can also be
+used as a conditional. This can be very useful for designing a WPS that works on
+multiple targets, some with and some without a clock. By using this tag as a
+conditional it is possible to display current date and time on those targets that
+support this
+\opt{rtc}{ (like the \playertype)},
+or alternate information on those that do not
+\nopt{rtc}{ (like the \playertype)}%
+.
+
+Example:
+\config{\%?cc{\textless}\%cH:\%cM{\textbar}No clock detected{\textgreater}}
+
 
 \section{Other Tags}
 \begin{table}
