--- a/manual/plugins/rockblox.tex
+++ b/manual/plugins/rockblox.tex
@@ -8,16 +8,16 @@ making the blocks fall faster. If the pile of blocks reaches the ceiling, the ga
 
 \begin{table}
     \begin{btnmap}{}{}
-    \nopt{ONDIO_PAD,PLAYER_PAD}{
-        \opt{RECORDER_PAD}{\ButtonFOne}
-        \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
-        \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
-        \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
-        \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
-        \opt{GIGABEAT_PAD}{\ButtonA}
-        \opt{MROBE100_PAD}{\ButtonDisplay}
+    \opt{RECORDER_PAD}{\ButtonFOne}
+    \opt{PLAYER_PAD}{\ButtonStop+\ButtonMenu}
+    \opt{IRIVER_H100_PAD,IRIVER_H300_PAD}{\ButtonOn}
+    \opt{IPOD_4G_PAD,IPOD_3G_PAD}{\ButtonSelect+\ButtonPlay}
+    \opt{IAUDIO_X5_PAD,IRIVER_H10_PAD}{\ButtonPlay}
+    \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonRec}
+    \opt{GIGABEAT_PAD}{\ButtonA}
+    \opt{MROBE100_PAD}{\ButtonDisplay}
+    \opt{ONDIO_PAD}{\ButtonMenu+\ButtonOff}
         & Restart game\\
-    }
     \ButtonLeft
         & Move left\\
     \ButtonRight
