FS#10202 - Add Rockpaint to the manual by Michael Carr.
git-svn-id: svn://svn.rockbox.org/rockbox/trunk@21003 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/plugins/main.tex
+++ b/manual/plugins/main.tex
@@ -181,6 +181,8 @@ the associated file. Viewers are stored in the
 
 {\input{plugins/random_folder_advance_config.tex}}
 
+\opt{lcd_color}{\input{plugins/rockpaint.tex}}
+
 \opt{recorder,recorderv2fm,ondio}{\input{plugins/split_editor.tex}}
 
 {\input{plugins/stats.tex}}
